--- a/final.html
+++ b/final.html
@@ -106,10 +106,10 @@
             font-size: 12px;
         }
 
-        .player-selection {
+        /* .player-selection {
             margin-left: auto;
             width: 1250px;
-        }
+        } */
     </style>
 </head>
 
