histogram legend fix

--- a/final.html
+++ b/final.html
@@ -133,7 +133,10 @@
             margin-top: 5vh;
         }
 
-        .
+
+        .champ-and-runner-up {
+            height: 150px;
+        }
 
         /* .player-selection {
             margin-left: auto;
@@ -179,10 +182,12 @@
                 <svg id="histogram"></svg>
             </div>
             <div class="histogram-logos">
-                <div>Champions</div>
-                <img id="histogram-champions" src="" />
-                <div>Runner-Up</div>
-                <img id="histogram-runnerup" src="" />
+                <div class="champ-and-runner-up">
+                    <div>Champions</div>
+                    <img id="histogram-champions" src="" />
+                    <div>Runner-Up</div>
+                    <img id="histogram-runnerup" src="" />
+                </div>
                 <div>
                     <svg id="h-legend" style="margin-top: 10vh;"></svg>
                 </div>
